--- a/resources_test/menu.rc
+++ b/resources_test/menu.rc
@@ -1,4 +1,5 @@
 #include "resource.h"
+#include "winres.h"
 
 IDR_MYMENU MENU
 BEGIN
@@ -12,6 +13,18 @@ BEGIN
         MENUITEM "&Go", ID_STUFF_GO
         MENUITEM "G&o somewhere else", 0, GRAYED
     END
+END
+
+IDD_ABOUT DIALOG DISCARDABLE 0, 0, 239, 66
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "My About Box"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "&OK",IDOK,174,18,50,14
+    PUSHBUTTON      "&Cancel",IDCANCEL,174,35,50,14
+    GROUPBOX        "About this program...",IDC_STATIC,7,7,225,52
+    CTEXT           "An example program showing how to use Dialog Boxes\r\n\r\nby theForger",
+                    IDC_STATIC,16,18,144,33
 END
 
 IDI_MYICON ICON "menu_icon.ico"
